add note of life about Dragon Boat Festival

--- a/life/沉默.md
+++ b/life/沉默.md
@@ -1,3 +1,12 @@
 到头来，我们记住的，不是敌人的打击，而是朋友的沉默。
 
 ——2017/5/15 22：33
+
+在 B 站混了这么久，终于打算自己也做几部游戏解说视频了。是的，一直喜欢玩游戏，也想把自己在游戏中的所思、所想、所得分享给大家，同时提升自己的胆量和口才。刚开始对着屏幕说话有点儿尴尬，那么就先买个麦克风用语音打字克服吧。希望自己能够说到做到。
+
+——2017/5/26 22:21
+
+今天是端午节，我也没吃几个粽子，想念家乡的油饼卷糕。小时候，还和小伙伴们一起折柳条呢，用鲜嫩的柳枝编成头环戴在头上，避暑又驱蚊，然后把柳条插在庄门外面，取辟邪之意，就跟传统中的艾草一样，不过我们那里没有艾草，就用柳条代替了。
+一到端午，一大帮子“土匪”就奔到了早已看好的大柳树下面，爬上去把柳条折下来，我们这此小屁孩儿不敢上树，就在下面捡，同时给大哥们放哨。有一年的端午，为了折到大把的柳枝，下午放学我和高年级的同学后去了很远的地方，因为端午折柳枝的习惯，村里几棵大柳树下面早早就有大人守护在那里，我们不敢过去。在远处的滩地上折完柳枝回来后，天已经黑了。我拖着一大捆的柳枝慢慢地向家里走去，心里充满欢快愉悦的心情。回到家里，家里人都急坏了，把我骂了一顿，不过我心里很甜蜜，那一大捆的柳枝就是我的战利品，后来还分给大伯家里一些呢。
+
+——2017/5/30 11:45
