--- a/life/大雨.md
+++ b/life/大雨.md
@@ -1,4 +1,4 @@
-天空突然下起大雨。突如其来，猝不及防。街道早已经成为了一片泽国，雨水夹杂着空气中的粉尘颗粒在地面上肆无忌惮地流水着。和同学一起吃完饭，撑着两个把伞走进了大雨中，趟水而行。雨水，狂风，电闪，雷鸣。刚走了几步，就成了落汤鸡。伞被风吹得几乎要脱手而去，切身感觉到了自己的渺小。
+天空突然下起大雨。突如其来，猝不及防。街道早已经成为了一片泽国，雨水夹杂着空气中的粉尘颗粒在地面上肆无忌惮地流水着。和同学一起吃完饭，撑着两把伞走进了大雨中，趟水而行。雨水，狂风，电闪，雷鸣。刚走了几步，就成了落汤鸡。伞被风吹得几乎要脱手而去，切身感觉到了自己的渺小。
 
 在这茫茫的大自然中，我们只不过是一粒小小的尘埃，不值一提。
 
@@ -9,7 +9,6 @@
 ——2016/8/10 23:41
 
 意气凌霄不知愁，愿上玉京十二楼。挥剑破云迎星落 ，举酒高歌引凤游。
-
 千载太虚无非梦 ，一段衷情不肯休。梦醒人间看微雨，江山还似旧温柔。
 
 ——2016/8/20 0:22
