--- a/life/沉默.md
+++ b/life/沉默.md
@@ -11,3 +11,7 @@
 一到端午，一大帮子“土匪”就奔到了早已看好的大柳树下面，爬上去把柳条折下来，我们这此小屁孩儿不敢上树，就在下面捡，同时给大哥们放哨。有一年的端午，为了折到大把的柳枝，下午放学我和高年级的同学后去了很远的地方，因为端午折柳枝的习惯，村里几棵大柳树下面早早就有大人守护在那里，我们不敢过去。在远处的滩地上折完柳枝回来后，天已经黑了。我拖着一大捆的柳枝慢慢地向家里走去，心里充满欢快愉悦的心情。回到家里，家里人都急坏了，把我骂了一顿，不过我心里很甜蜜，那一大捆的柳枝就是我的战利品，后来还分给大伯家里一些呢。
 
 ——2017/5/30 11:45
+
+同样内向。以前总以“沉默是金”来安慰自己，实际上这句话的真正含义是不常说话，但说话的时候很有分量，很有价值。我只做到了不常说话，一说话就紧张，害羞。这已经成为了我性格的缺陷，曾经努力想要改变，却没有成功。因为内向，我错过了很很多，以后还会继续错过，让人徒叹奈何。在电脑面前，我洋洋洒洒打下这么一大段文字，但是如果你在我面前，我内向得连头都抬不起来，我都要绝望了。
+
+——2017/6/24 14:02
