--- a/reading/你是否还傻到把最好的留在最后.md
+++ b/reading/你是否还傻到把最好的留在最后.md
@@ -4,27 +4,27 @@
 
 但人们往往忽略了至关重要的一点，就是这个最好有一个保质期。可以说人能拥有的快乐触发点、有机身体等，都会随着这个保质期的到来，慢慢变质。
 
-那么人们为什么选择过变质的生活呢?他们不知道这样会让自己的生活质量变得很低吗?
+那么人们为什么选择过变质的生活呢？他们不知道这样会让自己的生活质量变得很低吗？
 
 我想他们不一定是不知道，而是从来没想过换一个选择会让生活变得更好。
 
-这就好像旁边小花园开了漂亮的花，你不去看，反而在想明天摔碎了碗怎么办?
+这就好像旁边小花园开了漂亮的花，你不去看，反而在想明天摔碎了碗怎么办？
 
 然后今天的时间全用来担心明天碎的碗，等到了你想看花的时候，花已经凋谢没了。
 
-你这不是傻是什么?
+你这不是傻是什么？
 
 身边恋人对你好，你不和人家好好过日子，反而在想未来某一天他穷凶极恶的殴打自己。
 
 然后跟对方生气要分手，觉得对方不配拥有以后最好的你。等你所谓的最好到来时，人家早就心冷了。
 
-你这不是傻是什么?
+你这不是傻是什么？
 
 总是将自己每样最好的东西，留着憋着，天真的以为自己最终能放个大招。
 
 却将自己每个时间段里最好的东西都放坏了。
 
-你这不是傻是什么?
+你这不是傻是什么？
 
 就拿一袋苹果来举个例子吧，如果说这袋苹果每天只允许吃一个，那么：
 
@@ -46,7 +46,7 @@
 
 还有说自己习惯了一个人生活，已经不快乐了，现在改变也没有什么用。
 
-可是你可以试试啊，你先试试啊，你主动一点，你不多做做自己喜欢的事情，怎么知道呢?
+可是你可以试试啊，你先试试啊，你主动一点，你不多做做自己喜欢的事情，怎么知道呢？
 
 也许他们并不是不知道，他们只是都在等别人来帮助自己改变自己。
 
@@ -60,13 +60,13 @@
 
 小伙子却认为自己有对象以后就能变得干净，改掉自己懒散的毛病，然后把最好的自己留给对方。
 
-可是为什么要等到有了对象，或者有了什么什么之后才去改正呢?
+可是为什么要等到有了对象，或者有了什么什么之后才去改正呢？
 
-现在就让自己有一个好的方式生活不好吗?
+现在就让自己有一个好的方式生活不好吗？
 
-现在就让自己吃上好苹果不好吗?
+现在就让自己吃上好苹果不好吗？
 
-为什么非得把自己所谓的好留在后面呢?
+为什么非得把自己所谓的好留在后面呢？
 
 做事是如此。
 
@@ -74,7 +74,7 @@
 
 你不知道过了期限，东西会变质吗。
 
-你不知道大多数人没法将时间去等一个不确定的东西吗?
+你不知道大多数人没法将时间去等一个不确定的东西吗？
 
 时间那么宝贵，一天到晚不去琢磨怎么过好当下的每一天，却整天空想未来没有发生的灾难。
 
@@ -110,15 +110,15 @@
 
 他们宁愿每天吃剩饭剩菜，等吃完，原本新鲜食材又变成剩饭剩菜，又继续吃，一直到最后，所有新鲜的都活生生变成剩下的。
 
-何苦为难自己呢?
+何苦为难自己呢？
 
 明明可以过得更好啊。
 
 明明可以把每一天过得更好，每一天都能吃上新鲜饭菜啊。
 
-为什么硬要等到过期变味才舍得吃呢?
+为什么硬要等到过期变味才舍得吃呢？
 
-那些最好的，就这么活生生变成最差最烂的，你们难道不觉得可惜吗?
+那些最好的，就这么活生生变成最差最烂的，你们难道不觉得可惜吗？
 
 虽然知道他们的压力多数来自每个不确定又心惊胆战的未来。
 
@@ -134,7 +134,7 @@
 
 虽然知道他们在脑海里往往形成这样一个概念。
 
-明天过得不好怎么办?后天过得不好怎么办?未来某个日子里过得不好怎么办?
+明天过得不好怎么办？后天过得不好怎么办?未来某个日子里过得不好怎么办？
 
 可他们早就应该明白这件事。
 
