--- a/reading/异教徒.md
+++ b/reading/异教徒.md
@@ -1,3 +1,11 @@
+## 前言
+
+IT 工作人员之间的争端由来已久，从使用什么工具开发软件（集成开发环境或者编辑器）到某些语言末尾要不要加分号等等不一而足。事实上，我觉得这些争端大部分是没有意义的，在团队协作的时候，制定一个规范大家遵守即可。但是有些人把这些东西看成自己的“信仰”一般，甚是可笑，非得强加到别人头上，以显示自己的“正确性”，这就很过分了。
+
+如下一则笑话，就是如此，摘录于此，提醒自己。
+
+## 正文
+
 一天我路过一座桥，碰巧看见一个人想跳河自杀。我跑过去对他大喊道：“别跳，别死啊。”
 
 “为什么不让我跳？”他说。
