--- a/notes/逸游天下/逸游天下（开篇）.md
+++ b/notes/逸游天下/逸游天下（开篇）.md
@@ -8,7 +8,7 @@
 
 从小时候的小霸王学习机开始，我就对游戏陷入了深深的迷恋之中。当然了，在我少年的时候，电子游戏还被称为“精神毒品”，人们把游戏视为洪水猛兽。为此，沉迷游戏的我没少挨父母的打，不过我依然乐此不疲，后来父母见我并没有因为游戏而耽误学习，也就渐渐不再管了。当时家里没钱让我买学习机，于是自己就怂恿小伙伴买，说是用来学习的，结果都地球人都懂得，全用来玩游戏了，也不能说一点儿都没学，至少自己练习了一些五笔输入和简单的编程。当时我最渴望的就是得到一些好的游戏卡带，一盘卡带上的游戏越少，说明游戏质量越好。至于买学习机自带的“一百合一”什么的，完全就是垃圾，上面的游戏不好玩而且重复度极高，没意思。有了学习机后，我四处打听有好卡带的人，然后和他搭关系，说好话，求着把卡带借过来。就这样，玩过了一系列经典的游戏《超级玛丽》、《魂斗罗》、《冒险岛》等等。这些游戏都是日文或者英文的，年纪小都看不懂，很多地方只能靠猜，游戏中一些隐藏的关卡或者道具，需要听取有经验的人说如何进入或者得到，攻略口耳相传，有些记不住，就拿笔写到小本本上，而同桌嘴里那个能一命通关的大哥哥成为了我最崇拜的人。
 
-大学后，我有了自己的电脑。这下就完全玩开了，在一个个周末或者假期，玩过了很多经典之作，令人惭愧的是。当时玩的大部分是盗版，不过，其中很多的游戏我现在都在 steam 上补了票，也算是一种弥补了。感谢我那台老旧的笔记本，虽然性能不强，也让我能自由享受这些经典，这里也得说一句，不是说 3A 大作（指制作预算很高，开发周期很长，广告宣传投入很大的商业游戏）就一定是经典，很多其实也沦为了快餐，我的破笔记本性能差，于是我能够更加关注游戏性（没法子，画面太好的游戏带不起来），不至于众多次世代大作里迷失了双眼。游戏被称为第九艺术（继绘画、雕刻、建筑、音乐、诗歌（文学）、舞蹈、戏剧、电影等八大艺术之后），就在于其无与伦比的交互性，于是，我可以成为一名刺客，生于黑暗，服务于光明，也可以是一位指挥官，为自由与解放而战。如果太累的话，停下脚步，看看风景，也是一种难得的恬然与悠闲。
+大学后，我有了自己的电脑。这下就完全玩开了，在一个个周末或者假期，玩过了很多经典之作，令人惭愧的是。当时玩的大部分是盗版，不过，其中很多的游戏我现在都在 Steam 上补了票，也算是一种弥补了。感谢我那台老旧的笔记本，虽然性能不强，也让我能自由享受这些经典，这里也得说一句，不是说 3A 大作（指制作预算很高，开发周期很长，广告宣传投入很大的商业游戏）就一定是经典，很多其实也沦为了快餐，我的破笔记本性能差，于是我能够更加关注游戏性（没法子，画面太好的游戏带不起来），不至于众多次世代大作里迷失了双眼。游戏被称为第九艺术（继绘画、雕刻、建筑、音乐、诗歌（文学）、舞蹈、戏剧、电影等八大艺术之后），就在于其无与伦比的交互性，于是，我可以成为一名刺客，生于黑暗，服务于光明，也可以是一位指挥官，为自由与解放而战。如果太累的话，停下脚步，看看风景，也是一种难得的恬然与悠闲。
 
 到今天，玩过许许多多的游戏，令我十分痛心与惋惜的是国产单机的没落。十几年前，中国国产单机也有过辉煌，《流星蝴蝶剑》这样优秀的游戏也曾出现过。可是到了现在，基本上已经没有什么了，国产三剑（仙剑、古剑与轩辕剑）早已破损不堪，蒙上了斑斑的锈迹。以前没有好游戏的原因可以说是因为盗版，但是现在 Steam 上国区已经成为全球第二大的销售区，那原因是什么呢？很多中国的游戏人是奔着利益去做游戏的，于是市场上出现一大堆粗俗低劣的网游、页游与手游，你也甭管这些游戏好玩不好玩，能挣钱就行。游戏是商品，是要用来出售的，利益本来就是驱动游戏市场，或者说是驱动世界的源动力，这点我心知肚明。我只是感慨，像“波兰蠢驴”这样的游戏开发商真是太少了。
 
