--- a/life/道路.md
+++ b/life/道路.md
@@ -2,6 +2,6 @@
 
 ——2017/7/27 16:59
 
-现在网络上的审查越来越严格了，虽然我不会发表一些敏感言论，但是保不齐哪天博客就会被封，毕竟服务器是在国外，而且没有备案。出于安全起见，决定将博客系统从 Typecho 替换为 Hexo。过程比较漫长，在迁移文章的同时，还要删除一些没有营养的劣质博文。博客换成 Hexo 后，就比较轻松了，静态博客不需要数据库，所写的文章都在本地，远程服务器只起到托管作用。即便自己的购买的服务器有了问题，还可以托管到其他地方。在现有的网络环境下，一些网络服务真的很不稳定，还需要早做打算。
+现在网络上的审查越来越严格了，虽然我不会发表一些敏感言论，但是保不齐哪天博客就会被封，毕竟服务器是在国外，而且没有备案。出于安全起见，决定将博客系统从 Typecho 替换为 Hexo。过程比较漫长，在迁移文章的同时，还要删除一些没有营养的劣质博文。博客换成 Hexo 后，就比较轻松了，静态博客不需要数据库，所写的文章都在本地，远程服务器只起到托管作用。即便自己的购买的服务器有了问题，还可以托管到其他地方。在现有的网络环境下，一些网络服务真的很不稳定，早做打算没什么坏处。
 
 ——2017/8/3 17:16
